--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 /storage/*.key
 /vendor
 .env
+.env.production
+BaltimoreCyberTrustRoot.crt.pem
 .phpunit.result.cache
 Homestead.json
 Homestead.yaml
